[gd_scene load_steps=5 format=3 uid="uid://cxhrqrfu3f6ci"]

[ext_resource type="Script" path="res://minigames/in_game_entry/arcade_machine.gd" id="1_108f7"]
[ext_resource type="Texture2D" uid="uid://73rejlajlgly" path="res://art/arcade_machine.png" id="2_rft6x"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q7dfx"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a6msm"]

[node name="arcade_machine" type="StaticBody2D"]
script = ExtResource("1_108f7")

[node name="ArcadeMachine" type="Sprite2D" parent="."]
position = Vector2(-1.19209e-07, 7.10543e-15)
scale = Vector2(0.111111, 0.109028)
texture = ExtResource("2_rft6x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_q7dfx")
metadata/_edit_lock_ = true

[node name="DisplayName" type="Label" parent="."]
visible = false
z_index = 999
offset_left = -21.0
offset_top = -15.0
offset_right = 132.0
offset_bottom = 11.0
scale = Vector2(0.3, 0.3)
text = "dsadasd"
horizontal_alignment = 1

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 3)
shape = SubResource("RectangleShape2D_a6msm")

[connection signal="tree_entered" from="DisplayName" to="." method="_on_display_name_tree_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
